styles/Home.module.css
.container {
  background: radial-gradient(
    circle at top,
    hsl(214, 47%, 23%),
    hsl(237, 49%, 15%)
  );
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  padding: 32px;
  gap: 64px;
}

.header {
  border: 2px solid hsl(217, 16%, 45%);
  border-radius: 16px;
  padding: 24px 22px 16px 28px;
  display: flex;
  gap: 32px;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  width: 100%;
  max-width: 700px;
}

.header h1,
.header h2,
.header h3 {
  margin: 0;
}

.scoreBox {
  background-color: white;
  text-align: center;
  border-radius: 8px;
  padding: 8px 48px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.scoreBox .scoreTitle {
  color: hsl(229, 64%, 46%);
  text-transform: uppercase;
  font-weight: 600;
  letter-spacing: 2px;
  font-size: 17px;
  margin-top: 2px;
}

.score {
  color: hsl(229, 25%, 31%);
  font-size: 64px;
}

.game {
  max-width: 1366px;
  min-height: 400px;
  position: relative;
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-items: center;
  justify-items: center;
  gap: 48px;
  transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1), background 0s;
}

.starting {
  background: url("/bg-triangle.svg") center no-repeat;
}

.game.playing {
  width: 100%;
  gap: 16px;
}

.game.gameOver {
  grid-template-columns: 1fr 1fr 1fr;
}

.choiceTitle {
  text-align: center;
  color: white;
  text-transform: uppercase;
  font-size: 24px;
  letter-spacing: 2px;
  margin-top: 0;
  margin-bottom: 32px;
}

.gameOverTitle {
  text-align: center;
  color: white;
  text-transform: uppercase;
  font-size: 3rem;
  letter-spacing: 2px;
  margin-top: 0;
  margin-bottom: 32px;
}

.restart {
  color: hsl(214, 47%, 23%);
  background-color: white;
  border-radius: 8px;
  text-transform: uppercase;
  letter-spacing: 2px;
  padding: 16px;
  font-size: 0.9rem;
  font-weight: bold;
  border: 0;
  width: 100%;
}

.restart.lose {
  color: hsl(349, 71%, 52%);
}

.rulesWrapper {
  width: 100%;
  max-width: 1366px;
  display: flex;
  justify-content: flex-end;
}

.rulesButton {
  border: hsl(217, 16%, 45%) 2px solid;
  padding: 12px 36px;
  border-radius: 8px;
  letter-spacing: 2px;
  text-transform: uppercase;
  background-color: rgba(0, 0, 0, 0);
  font-size: 1rem;
  font-weight: 500;
  color: white;
}

@media (max-width: 500px) {
  .header {
    justify-content: center;
  }

  .starting {
    gap: 32px;
  }
}

